re PR target/35498 (libgomp/testsuite/libgomp.c/atomic-3.c fails on ppc-linux)

PR target/35498
	* config/rs6000/rs6000.c (rs6000_expand_compare_and_swapqhi): Shift
	wdst back after sync_compare_and_swapqhi_internal.

From-SVN: r133025